# robotvision

./: .gitignore  .gitmodules  frames.gv  todo.md
image/: convert
src/handover/: CMakeLists.txt  package.xml
src/handover/launch/: camera.launch  main.launch  main_lab.launch  servo.launch
src/handover/model/aruco_box/: README.md  aruco_marker.dae  model.config  model.sdf
src/handover/model/aruco_box/design/: marker_tile.afdesign  marker_tile_print.afdesign
src/handover/model/aruco_box/materials/textures/: marker_info.yml  marker_tile.afdesign
src/handover/model/aruco_box/src/: create_marker_tile_image.py
src/handover/rviz/: setup.rviz
src/handover/scripts/: StateMachine.py  arc.py  detect.py  functions.py  main.py  main_lab.py  mover.py  quaternions.py  reverse_projection.py  reverse_projection_aruco.py  reverse_projection_perspective.py  robot.py
src/handover/servoing/: simulation_config.yaml
